[refactor] Room 개선